# javalauncher

./: .gitignore  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  JVMLauncher.cpp  JVMLauncher.h  JavaLauncher.sln  JavaLauncher.vcxproj  JavaLauncher.vcxproj.filters  README.md  SingleInstance.cpp  SingleInstance.h  Toolchain-cross-mingw32-linux.cmake  Updater.cpp  Updater.h  appveyor.yml  build.bat  build.sh  javalauncher.dev  javalauncher.layout  main.cpp  packages.config
.nuget/: packages.config
Release/: javalauncher.exe.ini
config/: ConfigReader.cpp  ConfigReader.h
docs/: settings.md
jvmlauncher/: JVMLauncher.cpp  JVMLauncher.h  JVMLauncherException.cpp  JVMLauncherUtils.cpp  JVMLauncherUtils.h
nbproject/: project.xml
res/: version.rc
singleinstance/: SingleInstance.cpp  SingleInstance.h
src/: ConfigDefaults.h  ConfigReader.cpp  ConfigReader.h  JVMLauncher.cpp  JVMLauncher.h  JVMLauncherUtils.cpp  JVMLauncherUtils.h  Logger.cpp  Logger.h  SingleInstance.cpp  SingleInstance.h  Updater.cpp  Updater.h  icon.rc  log4z.h  main.cpp  mutex.cpp  mutex.h  platform.cpp  platform.h  resource.h  utils.cpp  utils.h  version.h.in  version.rc
src/config/: CMakeLists.txt  ConfigDefaults.h  ConfigDefaults.h.in  ConfigReader.cpp  ConfigReader.h
src/jvmlauncher/: CMakeLists.txt  JVMLauncher.cpp  JVMLauncher.h  JVMLauncherUtils.cpp  JVMLauncherUtils.h
src/log4z/: CMakeLists.txt  log4z.cpp  log4z.h
src/platform/: CMakeLists.txt  mutex.cpp  mutex.h  platform.cpp  platform.h
src/singleinstance/: CMakeLists.txt  SingleInstance.cpp  SingleInstance.h
src/updater/: CMakeLists.txt  Updater.cpp  Updater.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
test/: main.cpp
updater/: Updater.cpp  Updater.h
utils/: utils.cpp  utils.h
