cmake_minimum_required(VERSION 2.8)
project(JavaLauncher)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
  FIND_PACKAGE(Git)
  IF(GIT_FOUND)
    EXECUTE_PROCESS(COMMAND ${GIT_EXECUTABLE} describe --tags --always WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" OUTPUT_VARIABLE "LAUNCHER_VERSION" ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
  ELSE(GIT_FOUND)
    SET(LAUNCHER_VERSION 0)
  ENDIF(GIT_FOUND)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)

CONFIGURE_FILE(
  "${PROJECT_SOURCE_DIR}/src/version.h.in"
  "${PROJECT_SOURCE_DIR}/src/version.h"
)

set(APPLICATION_NAME DMDirc)
set(APPLICATION_PATH "c:\\\\Program Files\\\\DMDirc\\\\")
set(APPLICATION_MAIN "com/dmdirc/Main")
set(LAUNCHERUTILS_MAIN "com/dmdirc/LauncherUtils")
set(APPLICATION_SETUP "com/dmdric/LauncherUtils")
SET(APPLICATION_AUTOUPDATE true)
SET(LAUNCHER_AUTOUPDATE true)
SET(LAUNCHER_SINGLEINSTANCE true)

configure_file (
  "${PROJECT_SOURCE_DIR}/src/config/ConfigDefaults.h.in"
  "${PROJECT_SOURCE_DIR}/src/config/ConfigDefaults.h"
)

FIND_PACKAGE(JNI REQUIRED)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})


set(RES_FILES "${PROJECT_SOURCE_DIR}/res/version.rc" "${PROJECT_SOURCE_DIR}/res/icon.rc")

if(MSVC)
	set (CMAKE_EXE_LINKER_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup /DEBUG")
	set (CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_EXE_LINKER_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_MODULE_LINKER_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup /DEBUG")
	set (CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_MODULE_LINKER_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup /DEBUG")
	set (CMAKE_SHARED_LINKER_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup /DEBUG")
	set (CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_SHARED_LINKER_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
	set (CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup /DEBUG")
endif(MSVC)
if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -pthread")
endif()

set(EXECUTABLE_NAME "javalauncher")
include_directories(${CMAKE_SOURCE_DIR}/src)
file(GLOB SRC_FILES src/*.cpp src/**/*.cpp src/**/*.h)
add_executable("${EXECUTABLE_NAME}" ${SRC_FILES})